--- a/css/dark.css
+++ b/css/dark.css
@@ -40,6 +40,10 @@ a:hover {
 	opacity: 0.8;
 }
 
+.underline {
+		text-decoration: underline double red;
+}
+
 .post-tags .tags a {
     border: 1px solid #ddd;
 	color: #ddd;
